refactor(codegen): 代码生成表格列表根据表的元数据（createTime/updateTime）进行排序，最新有更新的表放在最前